syntax = "proto3";

package scouter.grpc.v1;

service MessageService {
  rpc InsertMessage(InsertMessageRequest) returns (InsertMessageResponse);
}

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message InsertMessageRequest {
  bytes message_record = 1;
}

message InsertMessageResponse {
  string status = 1;
  string message = 2;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string status = 2;
  string message = 3;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string token = 1;
  string status = 2;
  string message = 3;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool is_authenticated = 1;
  string status = 2;
  string message = 3;
}